--- a/UrunKatalogAPI/UrunKatalogAPI.Core/UrunKatalogAPI.Core.csproj
+++ b/UrunKatalogAPI/UrunKatalogAPI.Core/UrunKatalogAPI.Core.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Entities\" />
+    <Folder Include="Models\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.3" />
   </ItemGroup>
 
 </Project>
