--- a/UrunKatalogAPI/UrunKatalogAPI.Services/UrunKatalogAPI.Services.csproj
+++ b/UrunKatalogAPI/UrunKatalogAPI.Services/UrunKatalogAPI.Services.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="DTO\" />
-    <Folder Include="Service\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.3" />
   </ItemGroup>
 
 </Project>
