--- a/UrunKatalogAPI/Presentation/UrunKatalogAPI.API/UrunKatalogAPI.API.csproj
+++ b/UrunKatalogAPI/Presentation/UrunKatalogAPI.API/UrunKatalogAPI.API.csproj
@@ -8,7 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\UrunKatalogAPI.Core\UrunKatalogAPI.Core.csproj" />
+    <ProjectReference Include="..\..\UrunKatalogAPI.Infrastructere\UrunKatalogAPI.Infrastructere.csproj" />
   </ItemGroup>
 
 </Project>
