--- a/UrunKatalogAPI/UrunKatalogAPI.Core/UrunKatalogAPI.Core.csproj
+++ b/UrunKatalogAPI/UrunKatalogAPI.Core/UrunKatalogAPI.Core.csproj
@@ -7,11 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.3" />
   </ItemGroup>
 
 </Project>
