--- a/UrunKatalogAPI/UrunKatalogAPI.Infrastructere/UrunKatalogAPI.Infrastructere.csproj
+++ b/UrunKatalogAPI/UrunKatalogAPI.Infrastructere/UrunKatalogAPI.Infrastructere.csproj
@@ -8,10 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\UrunKatalogAPI.Core\UrunKatalogAPI.Core.csproj" />
+    <ProjectReference Include="..\UrunKatalogAPI.Services\UrunKatalogAPI.Services.csproj" />
   </ItemGroup>
 
 </Project>
