--- a/UrunKatalogAPI/Presentation/UrunKatalogAPI.API/UrunKatalogAPI.API.csproj
+++ b/UrunKatalogAPI/Presentation/UrunKatalogAPI.API/UrunKatalogAPI.API.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.2.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
