--- a/UrunKatalogAPI/UrunKatalogAPI.API/appsettings.json
+++ b/UrunKatalogAPI/UrunKatalogAPI.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=MERIC\\SQLEXPRESS; Database=UrunKatalog;Trusted_Connection=True;"
+    "DefaultConnection": "Server=MERIC\\SQLEXPRESS; Database=UrunKatalog; Trusted_Connection=True; Encrypt=False;"
   }
 }
