--- a/UrunKatalogAPI/UrunKatalogAPI.Core/UrunKatalogAPI.Core.csproj
+++ b/UrunKatalogAPI/UrunKatalogAPI.Core/UrunKatalogAPI.Core.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.3" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.3" />
+    <PackageReference Include="System.Linq" Version="4.3.0" />
   </ItemGroup>
 
 </Project>
