--- a/UrunKatalogAPI/UrunKatalogAPI.API/appsettings.json
+++ b/UrunKatalogAPI/UrunKatalogAPI.API/appsettings.json
@@ -2,7 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
   },
   "JwtConfig": {
@@ -10,6 +10,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=MERIC\\SQLEXPRESS; Database=UrunKatalog; Trusted_Connection=True; TrustServerCertificate=True"
+    "DefaultConnection": "Server=MERIC\\SQLEXPRESS; Database=UrunKatalog; Integrated Security=True; MultipleActiveResultSets=true; Trusted_Connection=True; TrustServerCertificate=True"
   }
 }
