--- a/UrunKatalogAPI/UrunKatalogAPI.API/appsettings.json
+++ b/UrunKatalogAPI/UrunKatalogAPI.API/appsettings.json
@@ -6,7 +6,9 @@
     }
   },
   "JwtConfig": {
-    "Secret": "5VJLeendEMczpocyM4kkY5LYHvcO0Yad2w769uTU"
+    "Secret": "5VJLeendEMczpocyM4kkY5LYHvcO0Yad2w769uTU",
+    "ValidAudience": "http://localhost:4200",
+    "ValidIssuer": "http://localhost:5000"
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
