Hangfire,Smtp added.

--- a/UrunKatalogAPI/UrunKatalogAPI.API/appsettings.json
+++ b/UrunKatalogAPI/UrunKatalogAPI.API/appsettings.json
@@ -10,8 +10,19 @@
     "ValidAudience": "http://localhost:4200",
     "ValidIssuer": "http://localhost:5000"
   },
-  "AllowedHosts": "*",
+  
   "ConnectionStrings": {
     "DefaultConnection": "Server=MERIC\\SQLEXPRESS; Database=UrunKatalog; Integrated Security=True; MultipleActiveResultSets=true; Trusted_Connection=True; TrustServerCertificate=True"
-  }
-}
+  },
+  "SmtpSettings": {
+    "Server": "smtp-mail.outlook.com",
+    "DefaultCredentials": false,
+    "Port": 587,
+    "SenderName": "Urun Katalog Projesi",
+    "SenderEmail": "urunkatalogprojem@outlook.com",
+    "Password": "urunKatalog1234",
+    "SSL": true
+  },
+
+    "AllowedHosts": "*"
+ }
