--- a/UrunKatalogAPI/UrunKatalogAPI.Core/UrunKatalogAPI.Core.csproj
+++ b/UrunKatalogAPI/UrunKatalogAPI.Core/UrunKatalogAPI.Core.csproj
@@ -9,7 +9,10 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="FluentValidation" Version="11.5.2" />
+    <PackageReference Include="MailKit" Version="3.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.6" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+    <PackageReference Include="MimeKit" Version="4.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
     <PackageReference Include="System.Linq" Version="4.3.0" />
   </ItemGroup>
