--- a/urunkatalog_client/package.json
+++ b/urunkatalog_client/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.8",
     "@fontsource/roboto": "^4.5.8",
     "@headlessui/react": "^1.7.14",
+    "@headlessui/tailwindcss": "^0.1.3",
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^1.4.2",
     "@mui/material": "^5.12.2",
