--- a/urunkatalog_client/package.json
+++ b/urunkatalog_client/package.json
@@ -17,6 +17,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "formik": "^2.2.9",
+    "fs": "^0.0.1-security",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-auth-kit": "^2.12.2",
