--- a/urunkatalog_client/package.json
+++ b/urunkatalog_client/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
+    "react-intl-currency-input": "^0.3.3",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.10",
