--- a/urunkatalog_client/package.json
+++ b/urunkatalog_client/package.json
@@ -28,6 +28,8 @@
     "react-intl-currency-input": "^0.3.3",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.7.3",
+    "react-tailwindcss-select": "^1.8.5",
     "styled-components": "^5.3.10",
     "web-vitals": "^2.1.4",
     "yup": "^1.1.1"
