--- a/UrunKatalogAPI/UrunKatalogAPI.API/appsettings.json
+++ b/UrunKatalogAPI/UrunKatalogAPI.API/appsettings.json
@@ -19,8 +19,8 @@
     "DefaultCredentials": false,
     "Port": 587,
     "SenderName": "Urun Katalog Projesi",
-    "SenderEmail": "urunkatalogprojem@outlook.com",
-    "Password": "urunKatalog1234",
+    "SenderEmail": "",
+    "Password": "",
     "SSL": true
   },
 
